# sanggar-antabung-indah

./: .env.example  .gitignore  Cargo.toml  agents.md  cookie.txt  package-lock.json  package.json  readme.md  tailwind.config.js  tsconfig.json  vite.config.js
.dev/instructions/: AI_PROMPT.md  AI_PROMPT_ACTION.md  AI_TEMPLATE.md  PRD.md  agents.md  catatan.md  development.md  inertia.md  login_register.html  template.html
database/migrations/: m20260501_000001_create_sessions_table.rs  m20260501_000002_create_users_table.rs  m20260528_110719_create_password_resets_table.rs  m20260528_111646_create_rbac_tables.rs  m20260528_112335_create_activity_log_table.rs  m20260528_230500_create_settings_table.rs  m20260529_200036_page_section.rs  m20260529_210000_create_cms_tables.rs  m20260530_104500_create_form_tables.rs  mod.rs
database/seeders/: database_seeder.rs
docs/: README.md  advanced.md  architecture.md  auth_cli.md  basics.md  cli.md  database.md  deployment.md  http.md  inline_routing.md  strings.md  testing.md  views.md
src/: lib.rs  main.rs
src/app/: inertia.rs  mod.rs  seeder.rs
src/app/helpers/: guest.rs  media.rs  mod.rs  webp.rs
src/app/http/: mod.rs
src/app/models/: activity_log.rs  article.rs  booking_category.rs  booking_package.rs  booking_request.rs  contact_info.rs  gallery.rs  join_category.rs  join_request.rs  join_step.rs  metric.rs  (+15 more)
src/config/: app.rs  build.rs  cli.rs  cors.rs  csrf.rs  mod.rs
src/routes/: api.rs  auth.rs  mod.rs  web.rs
tests/: feature_welcome_test.rs  unit_database_test.rs  unit_math_test.rs  unit_string_test.rs
(+96 files in other folders)
