[package]
name = "rustbasic"
version = "0.1.10"
edition = "2024"
build = "src/config/build.rs"
description = "The official starter template and CLI tool for the RustBasic Framework."
license = "MIT"
repository = "https://github.com/herisvan321/rustbasic"
keywords = ["web", "framework", "starter", "sqlx"]
categories = ["web-programming::http-server", "development-tools::scaffolding"]
default-run = "rustbasic"

[[bin]]
name = "rustbasic"
path = "src/main.rs"

[dependencies]
rustbasic-breeze = { version = "0.0" }
# Core Framework (Local Path)
rustbasic-core = "0.1"
# Shared dependencies with exact same versions as core to prevent redownload
serde = { version = "1.0.228", features = ["derive"] }
rust-embed = "8.11.0"
tokio = { version = "1.52.1", features = ["full"] }
rustbasic-medialibrary = "0.0.4"

# Profile Optimizations
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unexpected_cfgs = "allow"
